[gd_scene load_steps=40 format=3 uid="uid://diekjk3ddagdh"]

[ext_resource type="Script" uid="uid://bjsmnh4ltr48g" path="res://Scripts/Enemies/DaggerBandit/DaggerBandit.gd" id="1_eh1pt"]
[ext_resource type="Texture2D" uid="uid://nykgsy0rhhpb" path="res://Assets/Enemies/Dagger Bandit/Dagger Bandit Full Sprite Sheet.png" id="2_343tk"]
[ext_resource type="Script" uid="uid://bb0t2ovl7wifo" path="res://addons/beehave/nodes/beehave_tree.gd" id="3_3yx7k"]
[ext_resource type="Script" uid="uid://cw22yurt5l74k" path="res://addons/beehave/nodes/composites/selector_reactive.gd" id="4_8tkje"]
[ext_resource type="Script" uid="uid://7np33t66fmy8" path="res://Scripts/AI/Global/BH_GetPlayerInstance.gd" id="4_v3k4b"]
[ext_resource type="Script" uid="uid://cg016dbe7gs1x" path="res://addons/beehave/nodes/composites/sequence.gd" id="5_dbu40"]
[ext_resource type="Script" uid="uid://cn26qr1u25bex" path="res://Scripts/AI/Global/BH_IsAlive.gd" id="6_4yra5"]
[ext_resource type="Script" uid="uid://2yevedtv5j7y" path="res://Scripts/AI/Global/BH_IsNearPlayer.gd" id="6_8tkje"]
[ext_resource type="Script" uid="uid://b3tu71gr8n7xv" path="res://Scripts/AI/Global/BH_IsPlayerLowHP.gd" id="6_p2c3r"]
[ext_resource type="Script" uid="uid://xci1pudxr4qe" path="res://Scripts/AI/Global/BH_IsInSpecialAttackRange.gd" id="6_tmlgb"]
[ext_resource type="Script" uid="uid://dqudov72sagck" path="res://Scripts/AI/Global/BH_IsInAttackRange.gd" id="7_8tkje"]
[ext_resource type="Script" uid="uid://dntuu6jh0rbrc" path="res://Scripts/AI/DaggerBandit/BH_ChasePlayer.gd" id="7_343tk"]
[ext_resource type="Script" uid="uid://cm6n66pphle1b" path="res://Scripts/AI/Global/BH_SpecialAttackCooldown.gd" id="7_c6b1o"]
[ext_resource type="Script" uid="uid://bh8o8dhjaset6" path="res://Scripts/AI/Global/BH_AttackCooldown.gd" id="8_0jmer"]
[ext_resource type="Script" uid="uid://bdilyjqic41kf" path="res://Scripts/AI/DaggerBandit/BH_AttackPlayer.gd" id="8_0lprl"]
[ext_resource type="Script" uid="uid://qnbs45otj5im" path="res://Scripts/AI/DaggerBandit/BH_SpecialAttackPlayer.gd" id="8_scwyr"]
[ext_resource type="Script" uid="uid://crkjak4kyv56m" path="res://addons/beehave/nodes/decorators/inverter.gd" id="11_a6koa"]
[ext_resource type="Script" uid="uid://ctknw057vs4jf" path="res://Scripts/AI/DaggerBandit/BH_IsSpecialAttacking.gd" id="12_scwyr"]
[ext_resource type="Script" uid="uid://bcnwfm1dm72as" path="res://Scripts/AI/Global/BH_IsAttacking.gd" id="12_tmlgb"]
[ext_resource type="Script" uid="uid://5llb6og77u7k" path="res://Scripts/AI/Global/BH_IsTakingDamage.gd" id="20_7s4u7"]
[ext_resource type="Script" uid="uid://c4h8me4rbj2of" path="res://Scripts/Enemies/DaggerBandit/DaggerBanditHurtbox.gd" id="20_txxwi"]
[ext_resource type="Script" uid="uid://d2q3ddshnifto" path="res://Scripts/AI/Global/BH_Stun.gd" id="21_hddwv"]
[ext_resource type="PackedScene" uid="uid://coqr5e3f51esv" path="res://Scenes/Enemies/DaggerBandit/BasicAttackHitbox.tscn" id="21_kobnw"]
[ext_resource type="PackedScene" uid="uid://c8ri5qgjmp40k" path="res://Scenes/Enemies/DaggerBandit/SpecialAttackHitbox.tscn" id="22_7s4u7"]

[sub_resource type="AtlasTexture" id="AtlasTexture_kpr8r"]
atlas = ExtResource("2_343tk")

[sub_resource type="Animation" id="Animation_tmlgb"]
resource_name = "Attack_Left"
length = 0.7
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 9), Vector2i(1, 9), Vector2i(2, 9), Vector2i(3, 9), Vector2i(4, 9), Vector2i(5, 9), Vector2i(6, 9)]
}

[sub_resource type="Animation" id="Animation_a6koa"]
resource_name = "Attack_Right"
length = 0.7
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 8), Vector2i(1, 8), Vector2i(2, 8), Vector2i(3, 8), Vector2i(4, 8), Vector2i(5, 8), Vector2i(6, 8)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(2, -16)]
}

[sub_resource type="Animation" id="Animation_rykvf"]
resource_name = "Death_Left"
length = 1.6
step = 0.125
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25, 0.375, 0.5, 0.625, 0.75, 0.875, 1, 1.125, 1.25, 1.375, 1.5, 1.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 17), Vector2i(1, 17), Vector2i(2, 17), Vector2i(3, 17), Vector2i(4, 17), Vector2i(5, 17), Vector2i(6, 17), Vector2i(7, 17), Vector2i(8, 17), Vector2i(9, 17), Vector2i(10, 17), Vector2i(11, 17), Vector2i(12, 17), Vector2i(14, 17)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-3, -16)]
}

[sub_resource type="Animation" id="Animation_4yra5"]
resource_name = "Death_Right"
length = 1.6
step = 0.125
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25, 0.375, 0.5, 0.625, 0.75, 0.875, 1, 1.125, 1.25, 1.375, 1.5, 1.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 16), Vector2i(1, 16), Vector2i(2, 16), Vector2i(3, 16), Vector2i(4, 16), Vector2i(5, 16), Vector2i(6, 16), Vector2i(7, 16), Vector2i(9, 16), Vector2i(10, 16), Vector2i(11, 16), Vector2i(12, 16), Vector2i(13, 16), Vector2i(14, 16)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(2, -16)]
}

[sub_resource type="Animation" id="Animation_0lprl"]
resource_name = "Idle_Left"
loop_mode = 1
step = 0.125
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25, 0.375, 0.5, 0.625, 0.75, 0.875),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 1), Vector2i(1, 1), Vector2i(2, 1), Vector2i(3, 1), Vector2i(4, 1), Vector2i(5, 1), Vector2i(6, 1), Vector2i(7, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-2, -16)]
}

[sub_resource type="Animation" id="Animation_dbu40"]
resource_name = "Idle_Right"
loop_mode = 1
step = 0.125
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25, 0.375, 0.5, 0.625, 0.75, 0.875),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 0), Vector2i(1, 0), Vector2i(2, 0), Vector2i(3, 0), Vector2i(4, 0), Vector2i(5, 0), Vector2i(6, 0), Vector2i(7, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(2, -16)]
}

[sub_resource type="Animation" id="Animation_8tkje"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-2, -16)]
}

[sub_resource type="Animation" id="Animation_0jmer"]
resource_name = "Run_Left"
step = 0.125
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25, 0.375, 0.5, 0.625, 0.75, 0.875),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 3), Vector2i(1, 3), Vector2i(2, 3), Vector2i(3, 3), Vector2i(4, 3), Vector2i(5, 3), Vector2i(6, 3), Vector2i(7, 3)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-2, -16)]
}

[sub_resource type="Animation" id="Animation_343tk"]
resource_name = "Run_Right"
step = 0.125
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25, 0.375, 0.5, 0.625, 0.75, 0.875),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 2), Vector2i(1, 2), Vector2i(2, 2), Vector2i(3, 2), Vector2i(4, 2), Vector2i(5, 2), Vector2i(6, 2), Vector2i(7, 2)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(2, -16)]
}

[sub_resource type="Animation" id="Animation_scwyr"]
resource_name = "SpecialAttack_Left"
length = 2.1
loop_mode = 1
step = 0.125
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25, 0.375, 0.5, 0.625, 0.75, 0.875, 1, 1.125, 1.25, 1.375, 1.5, 1.625, 1.75, 1.875, 2, 2.1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 11), Vector2i(1, 11), Vector2i(2, 11), Vector2i(3, 11), Vector2i(4, 11), Vector2i(5, 11), Vector2i(6, 11), Vector2i(7, 11), Vector2i(8, 11), Vector2i(9, 11), Vector2i(10, 11), Vector2i(11, 11), Vector2i(12, 11), Vector2i(13, 11), Vector2i(14, 11), Vector2i(15, 11), Vector2i(16, 11), Vector2i(19, 11)]
}

[sub_resource type="Animation" id="Animation_c6b1o"]
resource_name = "SpecialAttack_Right"
length = 2.1
loop_mode = 1
step = 0.125
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25, 0.375, 0.5, 0.625, 0.75, 0.875, 1, 1.125, 1.25, 1.375, 1.5, 1.625, 1.75, 1.875, 2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 10), Vector2i(1, 10), Vector2i(2, 10), Vector2i(3, 10), Vector2i(4, 10), Vector2i(5, 10), Vector2i(6, 10), Vector2i(7, 10), Vector2i(8, 10), Vector2i(9, 10), Vector2i(10, 10), Vector2i(11, 10), Vector2i(12, 10), Vector2i(13, 10), Vector2i(14, 10), Vector2i(15, 10), Vector2i(19, 10)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(2, -16)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_0jmer"]
_data = {
&"Attack_Left": SubResource("Animation_tmlgb"),
&"Attack_Right": SubResource("Animation_a6koa"),
&"Death_Left": SubResource("Animation_rykvf"),
&"Death_Right": SubResource("Animation_4yra5"),
&"Idle_Left": SubResource("Animation_0lprl"),
&"Idle_Right": SubResource("Animation_dbu40"),
&"RESET": SubResource("Animation_8tkje"),
&"Run_Left": SubResource("Animation_0jmer"),
&"Run_Right": SubResource("Animation_343tk"),
&"SpecialAttack_Left": SubResource("Animation_scwyr"),
&"SpecialAttack_Right": SubResource("Animation_c6b1o")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_71qmi"]
size = Vector2(16, 17)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_txxwi"]
size = Vector2(16, 17)

[node name="DaggerBandit" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 524299
script = ExtResource("1_eh1pt")
health = 100

[node name="DamageTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(-2, -16)
texture = SubResource("AtlasTexture_kpr8r")
hframes = 20
vframes = 18

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_0jmer")
}
autoplay = "Idle_Right"

[node name="DaggerBanditBeehaveTree" type="Node" parent="." node_paths=PackedStringArray("blackboard", "actor")]
script = ExtResource("3_3yx7k")
actor_node_path = NodePath("..")
blackboard = NodePath("@Node@22986")
actor = NodePath("..")
metadata/_custom_type_script = "uid://bb0t2ovl7wifo"

[node name="SequenceComposite" type="Node" parent="DaggerBanditBeehaveTree"]
script = ExtResource("5_dbu40")
metadata/_custom_type_script = "uid://cg016dbe7gs1x"

[node name="IsAlive" type="Node" parent="DaggerBanditBeehaveTree/SequenceComposite"]
script = ExtResource("6_4yra5")
metadata/_custom_type_script = "uid://cn26qr1u25bex"

[node name="GetPlayerInstance" type="Node" parent="DaggerBanditBeehaveTree/SequenceComposite"]
script = ExtResource("4_v3k4b")
metadata/_custom_type_script = "uid://7np33t66fmy8"

[node name="SelectorReactiveComposite" type="Node" parent="DaggerBanditBeehaveTree/SequenceComposite"]
script = ExtResource("4_8tkje")
metadata/_custom_type_script = "uid://cw22yurt5l74k"

[node name="DamagedBehaviour" type="Node" parent="DaggerBanditBeehaveTree/SequenceComposite/SelectorReactiveComposite"]
script = ExtResource("5_dbu40")
metadata/_custom_type_script = "uid://cg016dbe7gs1x"

[node name="IsTakingDamage" type="Node" parent="DaggerBanditBeehaveTree/SequenceComposite/SelectorReactiveComposite/DamagedBehaviour"]
script = ExtResource("20_7s4u7")
metadata/_custom_type_script = "uid://5llb6og77u7k"

[node name="Stun" type="Node" parent="DaggerBanditBeehaveTree/SequenceComposite/SelectorReactiveComposite/DamagedBehaviour"]
script = ExtResource("21_hddwv")
metadata/_custom_type_script = "uid://d2q3ddshnifto"

[node name="NormalBehaviour" type="Node" parent="DaggerBanditBeehaveTree/SequenceComposite/SelectorReactiveComposite"]
script = ExtResource("4_8tkje")
metadata/_custom_type_script = "uid://cw22yurt5l74k"

[node name="Special Atack Sequence" type="Node" parent="DaggerBanditBeehaveTree/SequenceComposite/SelectorReactiveComposite/NormalBehaviour"]
script = ExtResource("5_dbu40")
metadata/_custom_type_script = "uid://cg016dbe7gs1x"

[node name="IsPlayerLowHP" type="Node" parent="DaggerBanditBeehaveTree/SequenceComposite/SelectorReactiveComposite/NormalBehaviour/Special Atack Sequence"]
script = ExtResource("6_p2c3r")
metadata/_custom_type_script = "uid://b3tu71gr8n7xv"

[node name="IsInSpecialAttackRange" type="Node" parent="DaggerBanditBeehaveTree/SequenceComposite/SelectorReactiveComposite/NormalBehaviour/Special Atack Sequence"]
script = ExtResource("6_tmlgb")
metadata/_custom_type_script = "uid://xci1pudxr4qe"

[node name="SpecialAttackCooldown" type="Node" parent="DaggerBanditBeehaveTree/SequenceComposite/SelectorReactiveComposite/NormalBehaviour/Special Atack Sequence"]
script = ExtResource("7_c6b1o")
metadata/_custom_type_script = "uid://cm6n66pphle1b"

[node name="SpecialAttack" type="Node" parent="DaggerBanditBeehaveTree/SequenceComposite/SelectorReactiveComposite/NormalBehaviour/Special Atack Sequence/SpecialAttackCooldown"]
script = ExtResource("8_scwyr")
metadata/_custom_type_script = "uid://qnbs45otj5im"

[node name="Attack Sequence" type="Node" parent="DaggerBanditBeehaveTree/SequenceComposite/SelectorReactiveComposite/NormalBehaviour"]
script = ExtResource("5_dbu40")
metadata/_custom_type_script = "uid://cg016dbe7gs1x"

[node name="IsInAttackRange" type="Node" parent="DaggerBanditBeehaveTree/SequenceComposite/SelectorReactiveComposite/NormalBehaviour/Attack Sequence"]
script = ExtResource("7_8tkje")
metadata/_custom_type_script = "uid://dqudov72sagck"

[node name="AttackCooldown" type="Node" parent="DaggerBanditBeehaveTree/SequenceComposite/SelectorReactiveComposite/NormalBehaviour/Attack Sequence"]
script = ExtResource("8_0jmer")
metadata/_custom_type_script = "uid://bh8o8dhjaset6"

[node name="Attack" type="Node" parent="DaggerBanditBeehaveTree/SequenceComposite/SelectorReactiveComposite/NormalBehaviour/Attack Sequence/AttackCooldown"]
script = ExtResource("8_0lprl")
metadata/_custom_type_script = "uid://bdilyjqic41kf"

[node name="Chase Sequence" type="Node" parent="DaggerBanditBeehaveTree/SequenceComposite/SelectorReactiveComposite/NormalBehaviour"]
script = ExtResource("5_dbu40")
metadata/_custom_type_script = "uid://cg016dbe7gs1x"

[node name="InverterDecorator2" type="Node" parent="DaggerBanditBeehaveTree/SequenceComposite/SelectorReactiveComposite/NormalBehaviour/Chase Sequence"]
script = ExtResource("11_a6koa")
metadata/_custom_type_script = "uid://crkjak4kyv56m"

[node name="IsSpecialAttacking" type="Node" parent="DaggerBanditBeehaveTree/SequenceComposite/SelectorReactiveComposite/NormalBehaviour/Chase Sequence/InverterDecorator2"]
script = ExtResource("12_scwyr")
metadata/_custom_type_script = "uid://ctknw057vs4jf"

[node name="InverterDecorator" type="Node" parent="DaggerBanditBeehaveTree/SequenceComposite/SelectorReactiveComposite/NormalBehaviour/Chase Sequence"]
script = ExtResource("11_a6koa")
metadata/_custom_type_script = "uid://crkjak4kyv56m"

[node name="IsAttacking" type="Node" parent="DaggerBanditBeehaveTree/SequenceComposite/SelectorReactiveComposite/NormalBehaviour/Chase Sequence/InverterDecorator"]
script = ExtResource("12_tmlgb")
metadata/_custom_type_script = "uid://bcnwfm1dm72as"

[node name="IsNearPlayer" type="Node" parent="DaggerBanditBeehaveTree/SequenceComposite/SelectorReactiveComposite/NormalBehaviour/Chase Sequence"]
script = ExtResource("6_8tkje")
metadata/_custom_type_script = "uid://2yevedtv5j7y"

[node name="ChasePlayer" type="Node" parent="DaggerBanditBeehaveTree/SequenceComposite/SelectorReactiveComposite/NormalBehaviour/Chase Sequence"]
script = ExtResource("7_343tk")
metadata/_custom_type_script = "uid://dntuu6jh0rbrc"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -8.5)
shape = SubResource("RectangleShape2D_71qmi")

[node name="HurtBox" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 9
script = ExtResource("20_txxwi")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
position = Vector2(0, -8.5)
shape = SubResource("RectangleShape2D_txxwi")
debug_color = Color(0.982366, 0.029952, 0.33587, 0.42)

[node name="BasicAttackHitbox" parent="." instance=ExtResource("21_kobnw")]
position = Vector2(0, -9)

[node name="SpecialAttackHitbox" parent="." instance=ExtResource("22_7s4u7")]
position = Vector2(0, -10)

[connection signal="area_entered" from="HurtBox" to="HurtBox" method="_on_area_entered"]
[connection signal="damageTaken" from="HurtBox" to="." method="_on_hurt_box_damage_taken"]
